--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
             
             <!-- email: creawebcom@outlook.fr</p></div> -->
             
-            <div class="container px-5"><p class="m-0 text-center text-white">Copyright &copy; CREAWEBCOM
+            <div class="container px-5"><p class="m-0 text-center text-white">Copyright &copy; All rights reserved 2024
          </p></div>
         </footer>
         <!-- Bootstrap core JS-->
